# mallocator

./: CMakeLists.txt  README.md  mm_alloc.c  mm_alloc.h
include/: buddy.h  firstfit.h  myalloc.h
src/: buddy.c  firstfit.c  main.cpp
tests/: MyAllocTest.cc
